@@ -15,6 +15,7 @@
 - improved response from the ErrorBuilder (empty fields are removed from the response)
 - improved built-in sessions by added `return {Number}` to `.update()` and `.refresh()` method
 - updated Tangular template engine to `v5`
+- extended `$` by adding `uri` property linked with the `controller.req.uri`
 
 ========================
 0.0.55
